fixed few errors
1. logo and border line in logo
2. last evaluate button not being placed properly.

fixed these ^^

errors left-
1. icon on transform
2. inspect errors
3. div overlapping issues

--- a/style.css
+++ b/style.css
@@ -19,24 +19,29 @@ html {
 	justify-content: center;
 }
 /*nav bar*/
+
+#nav-bar {
+	height: auto;
+	width: 100%;
+	position: fixed;
+	z-index: 100;
+	background-color: black;
+}
 .nav-bar {
 	background-color: black;
-    color: white;
 	left: 0;
 	top: 0;
-	padding: 1rem 5rem;
+	padding: 5rem;
 	width: 100%;
 	display: flex;
-	align-items: center;
 	justify-content: space-between;
-    font-size: large;
-    font-family: 'Sassy Frass';
-    /*not coming*/
-    border-style:none ;
-    border-color: white;
-    border-width: 1px; 
-    /*not coming*/
 }
+.nav-info {
+	font-family: 'Montserrat', sans-serif;
+	font-size: 3rem;
+	color: white;
+}
+
 
 /*end*/
 
@@ -132,8 +137,8 @@ html {
 /*extra section */
 .extra {
 	flex-direction: column;
-	min-height: 60vh;
-	padding: 10rem 5rem;
+	min-height: 10vh;
+	padding: 4rem 2rem;
     align-items: center;
 }
 .extra-header {
@@ -175,11 +180,11 @@ html {
 	display: block;
 }
  .extra-front {
- position: absolute;
+    position: absolute;
 	left: 10px;
 	top: 10px;
-	height: 100%;
-	width: 95%;
+	height: 95%;
+	width: 94%;
 	backface-visibility: hidden;
 	display: flex;
 	flex-direction: column;
@@ -231,7 +236,17 @@ html {
 /*end*/
 
 /*hire section */
+.evaluate{
+	min-height: 10vh;
+	flex-direction: column;
+	width: 100%;
+	height: 100%;
+	background-color: rgb(8, 8, 8);
+	padding: 3rem 2rem;
+}
 .evaluate-info{
+	color: black;
+	text-align: center;
     align-items: center;
 }
 .evaluate-button {
@@ -243,11 +258,12 @@ html {
 	text-decoration: none;
 	letter-spacing: .2rem;
 	margin-top: 10px;
-	color: whitesmoke;
+	color: black;
 	transition: .3s ease background-color;
 }
 .evaluate-button:hover {
 	background-color: black;
+	color: white;
 }
 /* End */
 
